RESOLVED FIXED170894
RTCPeerConnection addTrack does not require a stream parameter
https://bugs.webkit.org/show_bug.cgi?id=170894
Summary RTCPeerConnection addTrack does not require a stream parameter
youenn fablet
Reported 2017-04-16 15:43:00 PDT
RTCPeerConnection addTrack does not require a stream parameter as per the spec and https://github.com/w3c/webrtc-pc/issues/288
Attachments
Patch (6.27 KB, patch)
2017-04-16 15:44 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2017-04-16 15:44:05 PDT
youenn fablet
Comment 2 2017-04-16 15:44:59 PDT
(In reply to youenn fablet from comment #1) > Created attachment 307243 [details] > Patch Playing the stream before it gets the second track is changing the results. Probably worth investigating that further.
Alex Christensen
Comment 3 2017-04-17 00:09:50 PDT
Comment on attachment 307243 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=307243&action=review > LayoutTests/webrtc/video-addTrack-expected.txt:10 > +FAIL Testing image result, wait = false The index is not in the allowed range. Let's make this not say FAIL if it's the intended behavior.
youenn fablet
Comment 4 2017-04-17 07:59:45 PDT
Thanks for the review (In reply to Alex Christensen from comment #3) > Comment on attachment 307243 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=307243&action=review > > > LayoutTests/webrtc/video-addTrack-expected.txt:10 > > +FAIL Testing image result, wait = false The index is not in the allowed range. > > Let's make this not say FAIL if it's the intended Will need to check with Eric but I am not sure this is the expected behavior.
WebKit Commit Bot
Comment 5 2017-04-17 08:27:44 PDT
Comment on attachment 307243 [details] Patch Clearing flags on attachment: 307243 Committed r215412: <http://trac.webkit.org/changeset/215412>
WebKit Commit Bot
Comment 6 2017-04-17 08:27:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.