RTCPeerConnection addTrack does not require a stream parameter https://bugs.webkit.org/show_bug.cgi?id=170894

Patch by Youenn Fablet <youenn@apple.com> on 2017-04-17
Reviewed by Alex Christensen.

Source/WebCore:

Test: webrtc/video-addTrack.html

* Modules/mediastream/RTCPeerConnection.cpp:
(WebCore::RTCPeerConnection::addTrack): Removing obsolete error throwing.

LayoutTests:

* webrtc/video-addTrack-expected.txt: Added.
* webrtc/video-addTrack.html: Added.

Canonical link: https://commits.webkit.org/187827@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215412 268f45cc-cd09-0410-ab3c-d52691b4dbfc